[DOC-12608] Add Cosine Similarity Metric (#290)
* [DOC-12608] Adding another entry to similarity metric setting for cosine similarity.

* [DOC-12608] Implementing feedback from SME review

--- a/modules/search/partials/vector-search-field-descriptions.adoc
+++ b/modules/search/partials/vector-search-field-descriptions.adoc
@@ -36,6 +36,16 @@ Smaller euclidean distances mean that the values of each coordinate in the vecto
 +
 It's best to use *l2_norm* similarity when your embeddings contain information about the count or measure of specific things, and your embedding model uses the same similarity metric. 
 
+* *cosine*: Calculated by adding the result of multiplying a vector's components, or the product of the magnitudes of the vectors and the cosine of the angle between them.
+This metric is not affected by the size of the vectors being measured.
++
+Use *cosine* similarity to get the best results with an embedding model that uses cosine similarity.
+Cosine similarity works well for semantic search, document classification, and recommendation systems.
++
+The Search Service will normalize any vectors in your documents before indexing when using cosine similarity.
+It will also normalize any vectors in your queries if the field for those queries uses cosine similarity.
+Use *dot_product* similarity if your vectors are already normalized.
+
 For more information about Vector Search indexes, see xref:vector-search:vector-search.adoc[] or xref:vector-search:create-vector-search-index-ui.adoc[].
 // end::similarity_metric[]
 // tag::dimension[]
