[DOC-12252] Add tip with links to other SDK examples (#283)
* [DOC-12252] Add tip with links to other SDK examples

* [DOC-12252] Changing formatting of SDK list per peer review

--- a/modules/vector-search/pages/run-vector-search-sdk.adoc
+++ b/modules/vector-search/pages/run-vector-search-sdk.adoc
@@ -11,6 +11,16 @@
 
 For more information about how the Search Service scores documents in search results, see xref:search:run-searches.adoc#scoring[Scoring for Search Queries].
 
+[TIP]
+====
+Not all available Couchbase SDK languages are covered by the examples on this page.
+
+For additional Vector Search examples, see the SDK documentation: 
+
+xref:dotnet-sdk:howtos:full-text-searching-with-sdk.adoc#vector-search[.NET] | xref:cxx-sdk:howtos:vector-searching-with-sdk.adoc[C++] | xref:kotlin-sdk:howtos:full-text-search.adoc#vector-search[Kotlin] | xref:nodejs-sdk:howtos:full-text-searching-with-sdk.adoc#vector-search[Node.js] | xref:php-sdk:howtos:full-text-searching-with-sdk.adoc#vector-search[PHP] | xref:ruby-sdk:howtos:full-text-searching-with-sdk.adoc#vector-search[Ruby] | xref:scala-sdk:howtos:vector-searching-with-sdk.adoc[Scala]
+
+====
+
 == Prerequisites
 
 Choose your preferred programming language to view the applicable prerequisites for the examples on this page. 
