--- a/modules/search/pages/import-search-index.adoc
+++ b/modules/search/pages/import-search-index.adoc
@@ -29,9 +29,7 @@ To import a full xref:search-index-params.adoc[Search index definition] with the
 
 . On the *Operational Clusters* page, select the operational cluster where you want to import a JSON Search index definition.
 . Go to menu:Data Tools[Search].
-. Click btn:[Create Search Index].
-. Click btn:[Index Definition].
-. Click btn:[Import from File].
+. Click btn:[Import Search Index].
 . Upload a JSON file that contains your Search index definition.
 +
 For example:
@@ -40,6 +38,7 @@ For example:
 ----
 include::example$short-search-index.jsonc[]
 ----
+. Close the *Index Definition* panel.
 . (Optional) Make changes to your Search index settings. 
 +
 For more information, see xref:create-search-index-ui.adoc[].
