--- a/modules/search/pages/customize-index.adoc
+++ b/modules/search/pages/customize-index.adoc
@@ -70,7 +70,7 @@ This can improve Search index performance over indexing entire collections.
 If your operational cluster is running Couchbase Server version 7.6.2 and later, you can also choose to include document metadata inside your Search index by creating an XATTRs mapping.
 For more information about how to configure settings for the different types of mappings and type mappings, see xref:type-mapping-options.adoc[].
 
-For more information about how to configure a type mapping in the Search index editor, see xref:create-search-index-ui.adoc[].
+For more information about how to configure a type mapping in the Search index editor, see xref:create-type-mapping.adoc[].
 
 You can create two types of type mappings with the Search Service, in Quick Mode and Advanced Mode: 
 
@@ -83,7 +83,7 @@ You can create two types of type mappings with the Search Service, in Quick Mode
 When you do not know the structure of your data fields ahead of time, use a dynamic type mapping to add all available fields from a matching document type to an index.
 For example, you could create a dynamic type mapping to include all documents from the `hotel` collection in your Search index, or include all fields under a JSON object from your document schema.
 
-Configure this type of mapping by selecting a collection or JSON object in the Search index editor when you xref:create-search-index-ui.adoc[]. 
+Configure this type of mapping by selecting a collection or JSON object in the Search index editor when you xref:create-type-mapping.adoc[]. 
 
 [#static]
 === Static Type Mappings
@@ -91,7 +91,7 @@ Configure this type of mapping by selecting a collection or JSON object in the S
 When your data fields are stable and unlikely to change, use a static type mapping to add and define only specific fields from a matching document type to an index. 
 For example, you could create a static type mapping to only include the contents of the `city` field from the `hotel` collection in your Search index, as a text field with an `en` analyzer.
 
-Configure this type of mapping by selecting a field in your document schema in the Search index editor when you xref:create-search-index-ui.adoc[].
+Configure this type of mapping by selecting a field in your document schema in the Search index editor when you xref:create-type-mapping.adoc[].
 
 [#replica]
 == Replica and Partition Settings
@@ -192,6 +192,8 @@ For more information about how to create your own word list, see xref:create-cus
 
 == See Also 
 
+* xref:create-search-index-ui.adoc[] 
+* xref:create-type-mapping.adoc[] 
 * xref:set-type-identifier.adoc[]
 * xref:create-custom-analyzer.adoc[]
 * xref:create-custom-character-filter.adoc[]
